--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 
-    <nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-left">
                 <ul class="nav navbar-nav">
