--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="../bootstrap/dist/css/bootstrap.css" />
     <script type="text/javascript" src="../bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- END OF LOCAL TESTING LINKS -->
-
 </head>
 <body>
 
@@ -29,7 +28,7 @@
 
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
-                    <li>
+                    <li class="dropdown">
                         <a href="#" data-toggle="dropdown"><i class="icon-bell-filled"></i></a>
                         <ul class="dropdown-menu">
                             <li>
@@ -60,7 +59,8 @@
                     <li>
                         <a href="#" data-toggle="modal" data-target="#modal_help"><i class="icon-question"></i></a>
                     </li>
-                    <li>
+                    <li class="navbar-spacer"></li>
+                    <li class="dropdown">
                         <a href="#" class="lrg" data-toggle="dropdown"><i class="icon-menu"></i></a>                            
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Personalize</li>
@@ -91,9 +91,8 @@
 
 
     <!-- Modals -->
-
     <div class="modal fade" id="modal_help" tabindex="-1" role="dialog" aria-labelledby="modal_help" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
