--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title></title>
 
     <!-- LOCAL TESTING LINKS -->
-    <script type="text/javascript" src="../jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="../bootstrap/dist/css/bootstrap.css" />
     <script type="text/javascript" src="../bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- END OF LOCAL TESTING LINKS -->
@@ -61,7 +61,7 @@
                     </li>
                     <li class="navbar-spacer"></li>
                     <li class="dropdown">
-                        <a href="#" class="lrg" data-toggle="dropdown"><i class="icon-menu"></i></a>                            
+                        <a href="#" class="lrg" data-toggle="dropdown"><i class="icon-menu"></i></a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-header">Personalize</li>
                             <li><a href="#"><i class="icon-ribbon"></i>Bookmarks</a></li>
