--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="#">
-                                    <button type="button" class="close pull-right"><span aria-hidden="true">×</span></button>
+                                    <button type="button" class="close pull-right"><span aria-hidden="true">ï¿½</span></button>
                                     <img class="img-thumbnail pull-left" src="https://raw.githubusercontent.com/ozone-development/center-ui/master/app/images/sample-listings/JotSpot32.png" />
                                     <span>Writing down for maintenance</span><br /><i class="small">12/12/12 00:00</i>
                                 </a>
@@ -41,7 +41,7 @@
                             <li class="divider"></li>
                             <li>
                                 <a href="#">
-                                    <button type="button" class="close"><span aria-hidden="true">×</span></button>
+                                    <button type="button" class="close"><span aria-hidden="true">ï¿½</span></button>
                                     <img class="img-thumbnail pull-left" src="https://raw.githubusercontent.com/ozone-development/center-ui/master/app/images/sample-listings/AirMail32.png" />
                                     <span>Airplanes down for maintenance</span><br /><i class="small">12/12/12 00:00</i>
                                 </a>
@@ -49,7 +49,7 @@
                             <li class="divider"></li>
                             <li>
                                 <a href="#">
-                                    <button type="button" class="close"><span aria-hidden="true">×</span></button>
+                                    <button type="button" class="close"><span aria-hidden="true">ï¿½</span></button>
                                     <img class="img-thumbnail pull-left" src="https://raw.githubusercontent.com/ozone-development/center-ui/master/app/images/sample-listings/ChatterBox32.png" />
                                     <span>Chat down for maintenance</span><br /><i class="small">12/12/12 00:00</i>
                                 </a>
@@ -59,7 +59,6 @@
                     <li>
                         <a href="#" data-toggle="modal" data-target="#modal_help"><i class="icon-question"></i></a>
                     </li>
-                    <li class="navbar-spacer"></li>
                     <li class="dropdown">
                         <a href="#" class="lrg" data-toggle="dropdown"><i class="icon-menu"></i></a>
                         <ul class="dropdown-menu">
@@ -77,7 +76,7 @@
                             <li><a href="#"><i class="icon-layers"></i>Listing Management</a></li>
                             <li><a href="#"><i class="icon-shopping-settings"></i>Marketplace Settings</a></li>
                             <li><a href="#"><i class="icon-bar-graph-2"></i>Metrics</a></li>
-                            <li><a class="caboose" href="#"><i class="icon-arrow-right"></i>Logout</a></li>
+<!-- Not yet feasible       <li><a class="caboose" href="#"><i class="icon-arrow-right"></i>Logout</a></li> -->
                         </ul>
                     </li>
                 </ul>
