Added "Active" to filled bell to fix color
Since filled is the “Active” state of the notifications icon, it needs
to be colored to draw attention. So, I added class: “Active” to it to
ensure it was styled appropriately

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="navbar-right">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" data-toggle="dropdown"><i class="icon-bell-filled"></i></a>
+                        <a href="#" data-toggle="dropdown"><i class="icon-bell-filled active"></i></a>
                         <ul class="dropdown-menu">
                             <li>
                                 <a href="#">
