--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <li><a href="#" data-toggle="modal" data-target="#modal_settings"><i class="icon-cog"></i>Settings</a></li>
                             <li class="divider"></li>
                             <li class="dropdown-header">Create</li>
-                            <li><a href="#"><i class="icon-wrench"></i>Build a Dashboard</a></li>
+<!-- Not yet feasible       <li><a href="#"><i class="icon-wrench"></i>Build a Dashboard</a></li> -->
                             <li><a href="#"><i class="icon-square-plus"></i>Submit a Listing</a></li>
                             <li><a href="#"><i class="icon-cloud"></i>Developer Resources</a></li>
                             <li class="divider"></li>
